[tool.poetry]
name = "dothis"
version = "0.1.0"
description = ""
authors = ["uigctaw <uigctaw@metadata.social>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
mypy = "^1.9.0"


[tool.ruff]
target-version = "py311"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",  # flake8-annotations
    "C408",  # unnecessary-collection-call
    "D10",  # undocumented-*
    "D203",  # "1 blank line required before class docstring"
    "D213",  # "Multi-line docstring summary should start at the second line"
    "RET504",  # unnecessary-assign
    "RET505",  # superfluous-else-return
    "S101",  # assert
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
